[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]

[tool.mypy]
strict = true

[tool.poetry]
name = "aoirint-matvtool"
version = "0.0.0"
description = "A command line tool to handle a multi audio track video file"
authors = ["aoirint <aoirint@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aoirint/matvtoolpy"
packages = [{include = "aoirint_matvtool"}]

[tool.poetry.scripts]
matvtool = "aoirint_matvtool.cli:main"

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.7.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.66.0.20240417"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pyinstaller = "^6.7.0"
ruff = "^0.13.0"
mypy = "^1.18.1"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
